# jutsu

./: Cargo.toml  LICENSE  README.md  jutsu-client.service
cli/: Cargo.toml
cli/src/: lib.rs
cli/src/command/: mod.rs  types.rs
client/: Cargo.toml
client/src/: main.rs
core/: Cargo.toml
core/benches/: bench_datagram_find.rs  bench_proc_meminfo.rs
core/src/: cli.rs  lib.rs  response.rs  socket.rs  ssh.rs
core/src/datagram/: datagram.rs  find.rs  info.rs  mod.rs  packet16.rs.old  segment.rs  string.rs
core/src/packet/: find.rs  mod.rs
core/src/proc/: hostname.rs  loadavg.rs  meminfo.rs  mod.rs
core/src/segment/: mod.rs
core/src/segment/find/: mod.rs  username.rs
core/src/segment/info/: hostname.rs  loadavg.rs  meminfo.rs  mod.rs
core/src/thread/: mod.rs
daemon/: Cargo.toml
daemon/src/: main.rs
