[package]
name = "jutsu-core"
version = "0.1.0"
edition = "2021"
authors = ["Joshua Joseph Myers, joshuajosephmyers@outlook.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.2", features = ["derive"] }
utmp-rs = "0.3.0"
bincode = "1.3.3"
serde = { version = "1.0.145", features = ["derive"] }
ssh2 = "0.9.3"
openssl = { version = "0.10", features = ["vendored"] }
rpassword = "0.0.4"
